--- a/package.json
+++ b/package.json
@@ -5,22 +5,25 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' server.ts"
+        "dev": "npx nodemon ./server/server.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/express": "^4.17.13",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "joi": "^17.6.0",
         "mongoose": "^6.3.5",
-        "tslint": "^6.1.3",
-        "typescript": "^4.7.2"
+        "ts-node": "^10.8.0",
+        "ts-node-dev": "^2.0.0",
+        "tslint": "^6.1.3"
     },
     "devDependencies": {
+        "@types/express": "^4.17.13",
+        "@types/mongoose": "^5.11.97",
+        "@types/node": "^17.0.38",
         "nodemon": "^2.0.16",
-        "ts-node": "^10.8.0"
+        "typescript": "^4.7.2"
     }
 }
