--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "npx nodemon ./server/server.ts"
+        "dev": "set NODE_ENV=development && npx nodemon ./server/server.ts"
     },
     "keywords": [],
     "author": "",
