--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mongodb-1",
+    "name": "restapi-marketplace",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -21,7 +21,6 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
-        "@types/mongoose": "^5.11.97",
         "@types/node": "^17.0.38",
         "nodemon": "^2.0.16",
         "typescript": "^4.7.2"
