--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "helmet": "^5.1.0",
         "joi": "^17.6.0",
         "mongoose": "^6.3.5",
         "ts-node": "^10.8.0",
@@ -21,6 +22,7 @@
         "tslint": "^6.1.3"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.38",
         "nodemon": "^2.0.16",
