--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "set NODE_ENV=development && npx nodemon ./server/server.ts",
-        "start": "set NODE_ENV=development && node dist/server.js",
+        "start": "set NODE_ENV=production && node dist/server.js",
         "postinstall": "tsc"
     },
     "keywords": [],
